@@ -1,3 +1,4 @@
 2022-01-20  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* include/kernaux/assert.h: Added unconditional assertion (panic)
+	* include/kernaux/assert.h: Added guards for unconditional assertion (panic)
